# BuddyOS

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md
.github/: CODEOWNERS
.github/agent/: PAUSED  audit.md  design.md  improve.md  policy.md
.github/workflows/: auto-audit.yml  auto-design.yml  auto-improve.yml  auto-merge-yellow.yml  auto-merge.yml
apps/desktop/: README.md  package-lock.json  package.json
apps/desktop/src/: App.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: chat.rs  keychain.rs  lib.rs  main.rs  transcribe.rs
apps/desktop/src-tauri/src/components/Companion/: BuddyModel.tsx
apps/desktop/src/components/Chat/: InputBar.tsx  MessageList.tsx
apps/desktop/src/components/Companion/: BuddyModel.tsx  CompanionStage.tsx  SpeechBubble.tsx
apps/desktop/src/components/Onboarding/: HotkeyCapture.tsx
apps/desktop/src/components/Settings/: SettingsPanel.tsx
apps/desktop/src/lib/: ipc.ts  sendMessage.ts  speak.ts  store.ts  useVisibility.ts  useVoiceRecorder.ts  viewport.ts
apps/desktop/src/styles/: globals.css
apps/desktop/src/windows/: Onboarding.tsx  Summon.tsx
apps/site/: README.md  package-lock.json  package.json
apps/site/.claude/: launch.json
apps/site/src/app/: globals.css  layout.tsx  page.tsx
apps/site/src/components/Chat/: ChatDock.tsx  ChatPanel.tsx
apps/site/src/lib/: chatClient.ts  companionStore.ts  waypoints.ts
brand/: BUDDY_CREATIVE_BIBLE.md
docs/: AGENT.md  ARCHITECTURE.md  DESKTOP_APP_BRIEF.md  ROADMAP.md
(+24 files in other folders)
